# doctown-v14

./: .gitignore  README.md  pyproject.toml  run_local.sh  run_web.sh
src/: DOCPACK_FORMAT.md  IMPL_ORDER.md
src/docpack/: __init__.py  cli.py  embed.py  serve.py
src/docpack/ingest/: freeze.py
src/docpack/storage/: __init__.py  schema.py
src/flight_deck/: app.py  main.py
src/flight_deck/screens/: __init__.py  commons.py  freeze.py  generate.py  home.py  path_input.py  viewer.py
src/flight_deck/widgets/: __init__.py  drop_zone.py  file_tree.py  file_viewer.py  freeze_progress.py  info_panel.py  nav_bar.py  notes_panel.py  recall_search.py  rocket_progress.py  top_bar.py  window.py
