[project]
name = "doctown"
version = "14.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.22.0",
    "sentence-transformers>=5.1.2",
    "textual>=6.6.0",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
]

[project.scripts]
docpack = "docpack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docpack", "src/flight_deck"]
