[project]
name = "doctown"
version = "14.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.22.0",
    "sentence-transformers>=5.1.2",
    "textual>=6.6.0",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-json>=0.24.0",
    "tree-sitter-yaml>=0.7.0",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-bash>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-markdown>=0.4.0",
]

[project.scripts]
docpack = "docpack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docpack", "src/flight_deck"]
